use breaks instead

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 <h2>
   <a id="product-listings" class="anchor" href="#product-listings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Product Listings</h2>
 
-  <p><em>[API]</em></p>
-  <p>Not currently supported</p>
+  <p><em>[API]</em><br/>
+  Not currently supported</p>
 
-  <p><em>[Manual CSV]</em></p>
-  <p>We support CSV imports to load products to be listed on Tanga.  You can find the current CSV format HERE.  Email the completed file to <a href="mailto:sourcing@tanga.com">sourcing@tanga.com</a> for review/import.</p>
+  <p><em>[Manual CSV]</em><br/>
+  We support CSV imports to load products to be listed on Tanga.  You can find the current CSV format HERE.  Email the completed file to <a href="mailto:sourcing@tanga.com">sourcing@tanga.com</a> for review/import.</p>
 
   <p>We also support the Etsy Export file format LINK HERE.</p>
 
-  <p><em>[Future]</em></p>
-  <p>We are working on Google Product Feed and Amazon Product feed imports.</p>
+  <p><em>[Future]</em><br/>
+  We are working on Google Product Feed and Amazon Product feed imports.</p>
 
 <h2>
   <a id="inventory" class="anchor" href="#inventory" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inventory
