fix <code> block that is broken

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <code>curl -X POST -d package_id=12234 -d tracking_number=1Zasdf --user email:password https://vendors.tanga.com/api/vendors/&lt;id&gt;/set_tracking</code></p>
 
   <p>upload multiple tracking numbers via csv file:<br/>
-  <code>curl -X POST --user email:password -d "csv=</code>cat /tmp/t.csv<code>" https://vendors.tanga.com/api/vendors/&lt;id&gt;/set_tracking</code></p>
+  <code>curl -X POST --user email:password -d "csv=cat /tmp/t.csv" https://vendors.tanga.com/api/vendors/&lt;id&gt;/set_tracking</code></p>
   <p>The CSV file should be in the same format as the one you upload to <a href="https://vendors.tanga.com">https://vendors.tanga.com</a>.</p>
 
   <p><em>[Manual CSV]</em><br/>
