--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ This will return the data in csv format you define.</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>&copyright; TangaCom, LLC 2015</a></p>
+        <p>&copy; TangaCom, LLC 2015</a></p>
       </footer>
     </div>
   </body>
