Extend width.  Add CSV file.  Add Etsy file.  Fix url.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   Not currently supported</p>
 
   <p><em>[Manual CSV]</em><br/>
-  We support CSV imports to load products to be listed on Tanga.  You can find the current CSV format HERE.  Email the completed file to <a href="mailto:sourcing@tanga.com">sourcing@tanga.com</a> for review/import.</p>
+  We support CSV imports to load products to be listed on Tanga.  You can find the current CSV format <a href="https://www.dropbox.com/s/ksipge7agk1ae8o/Vendor%20Product%20Information%20Sheet.xlsx?dl=0">here</a>.  Email the completed file to <a href="mailto:sourcing@tanga.com">sourcing@tanga.com</a> for review/import.</p>
 
-  <p>We also support the Etsy Export file format LINK HERE.</p>
+  <p>We also support the <a href="https://www.etsy.com/help/article/338">Etsy Export</a> file format.</p>
 
   <p><em>[Future]</em><br/>
   We are working on Google Product Feed and Amazon Product feed imports.</p>
