udpate uri for inventory

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <p><em>[API]</em><br/>
   inventory report in json format:<br/>
-  <code>curl --user email:password <a href="https://vendors.tanga.com/api/vendors/">https://vendors.tanga.com/api/vendors/</a>/inventory_report</code></p>
+  <code>curl --user email:password https://vendors.tanga.com/api/vendors/inventory_report</code></p>
 
   <p>Currently we do not support inventory updating in the API.</p>
 
