--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
+<p>Questions can be sent to <a href="mailto:dev@tanga.com">dev@tanga.com</a></p>
+
 <h2>
   <a id="authentication" class="anchor" href="#authentication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authentication
 </h2>
