--- a/index.html
+++ b/index.html
@@ -47,20 +47,29 @@
   <p><em>[Manual CSV]</em><br/>
   We support CSV imports to load products to be listed on Tanga.  You can find the current CSV format <a href="https://www.dropbox.com/s/ksipge7agk1ae8o/Vendor%20Product%20Information%20Sheet.xlsx?dl=0">here</a>.  Email the completed file to <a href="mailto:sourcing@tanga.com">sourcing@tanga.com</a> for review/import.</p>
 
-  <p>We also support the <a href="https://www.etsy.com/help/article/338">Etsy Export</a> file format.</p>
+  <p>We also support the following:</p>
+  <ul>
+    <li><a href="https://www.etsy.com/help/article/338">Etsy Export</a></li>
+    <li>Overstock File Formats</li>
+    <li>Amazon Product Feed</li>
+  </ul>
 
   <p><em>[Future]</em><br/>
-  We are working on Google Product Feed and Amazon Product feed imports.</p>
+  We are working on Google Product Feed and Channel Advisor.</p>
 
 <h2>
   <a id="inventory" class="anchor" href="#inventory" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inventory
 </h2>
+  <p><em>[Manual CSV]</em><br/>
+  You can currently upload your inventory or get a listing of inventory in the <a href="http://vendors.tanga.com">Vendor Portal</a></p>
+
 
   <p><em>[API]</em><br/>
   inventory report in json format:<br/>
   <code>curl --user email:password https://vendors.tanga.com/api/vendors/inventory_report</code></p>
 
   <p>Currently we do not support inventory updating in the API.</p>
+
 
   <p><em>[Future]<br/>
   We will support REST based inventory updates.</p>
