Update to 3.3 version of vendor product

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   Not currently supported</p>
 
   <p><em>[Manual CSV]</em><br/>
-  We support CSV imports to load products to be listed on Tanga.  You can find the current CSV format <a href="https://www.dropbox.com/s/ksipge7agk1ae8o/Vendor%20Product%20Information%20Sheet.xlsx?dl=0">here</a>.  Email the completed file to <a href="mailto:sourcing@tanga.com">sourcing@tanga.com</a> for review/import.</p>
+  We support CSV imports to load products to be listed on Tanga.  You can find the current CSV format <a href="https://www.dropbox.com/s/ggmbfucmeabbp7w/3.3%20Vendor%20Product%20Information%20Sheet.xlsx?dl=0">Version 3.3</a>.  Email the completed file to <a href="mailto:sourcing@tanga.com">sourcing@tanga.com</a> for review/import.</p>
 
   <p>We also support the following:</p>
   <ul>
